legacy/differential_testing/gcc_regression/gcc_reg_cb/results/gcc540/save_st/pr56540.c-5.4.0-1.out.txt
pr56540.c:4:14: error: ‘__SIZEOF_FPREG__’ undeclared here (not in a function)
 extern int a[__SIZEOF_FPREG__ != sizeof (__fpreg) ? -1 : 1];
              ^
pr56540.c:4:42: error: ‘__fpreg’ undeclared here (not in a function)
 extern int a[__SIZEOF_FPREG__ != sizeof (__fpreg) ? -1 : 1];
                                          ^
